examples/test/testpolicy779.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy779
  namespace: namespace146
spec:
  podSelector:
    matchLabels:
      key27: value1
      key49: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value34
      podSelector:
        matchLabels:
          key35: value10
          key18: value15
          key3: value25
